bynkc/tests/fixtures/negative/365_generic_bare_use/input.bynk
commons bad

type Box[T] = { value: T }

fn f(b: Box) -> Int {
  0
}
